--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -236,7 +236,7 @@ header {
 			}
 		}
 
-		form {
+		.site-nav form {
 			display: none;
 		}
 
